# platform-serial-linux

./: CHANGELOG.txt  Cargo.toml  README.md
src/: lib.rs
